# sqlite-delta

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml  renovate.json  test.sh  testlib.py
.claude/: settings.json
.github/workflows/: ci.yml
patterns/three-phase/: README.md  pattern.py  pattern.sql
patterns/trigger-lite/: README.md  pattern.py  pattern.sql
