[project]
name = "sqlite-delta"
version = "0.1.0"
description = "Collection of CDC patterns for SQLite."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["python-fossil-delta>=18.11.27"]

[dependency-groups]
dev = ["poethepoet>=0.36.0", "ruff>=0.12.3"]

[tool.ruff]
line-length = 100

[tool.poe.tasks]
lint = "uv run ruff check"
fmt = "uv run ruff format"
test = "./test.sh"
